# flutter_live

./: .flutter-plugins-dependencies  AGENTS.md  CLAUDE.md  README.md  gift_convert.md  gift_convert2.md  gift_gif.md  main_player  pubspec.yaml  qwerwer
android/: build.gradle.kts  gradle.properties
android/app/: build.gradle.kts
ios/: Podfile
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/bridge/: hardcore_mixer.dart
lib/models/: user_models.dart
lib/screens/: dashboard_tabs.dart  me_screen.dart
lib/services/: ai_music_service.dart  ai_realtime_voice_service.dart  ai_service.dart  gift_api.dart  update_manager.dart  user_service.dart
lib/store/: account_events.dart  user_store.dart
lib/tools/: AudioTool.dart  DateTool.dart  DictTool.dart  GiftColorsTool.dart  HttpUtil.dart  StringTool.dart  VoicePlayerTool.dart  time_util.dart
lib/widgets/: in_app_notification.dart
linux/: CMakeLists.txt
linux/runner/: my_application.cc
my_alpha_player/: README.md  pubspec.yaml
plugins/hardcore_mixer/android/: CMakeLists.txt  build.gradle  settings.gradle
plugins/hardcore_mixer/android/src/main/: AndroidManifest.xml
plugins/hardcore_mixer/android/src/main/cpp/: hardcore_jni.cpp
plugins/hardcore_mixer/android/src/main/kotlin/com/example/hardcore_mixer/: HardcoreMixerPlugin.kt  HardcoreRenderer.kt  VideoDecoderPool.kt
plugins/hardcore_mixer/android/src/test/kotlin/com/example/hardcore_mixer/: HardcoreMixerPluginTest.kt
web/: alpha_player_web.js  index.html  manifest.json  support.html
windows/: CMakeLists.txt
(+201 files in other folders)
